# sniffer

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: frame-rates.md
sniffer/: __init__.py  main.py  transcription.py  types.py  video_processor.py
sniffer/cli/: __init__.py  display.py  process_handler.py
sniffer/config/: __init__.py  constants.py
sniffer/services/: __init__.py  frame_extraction.py  results_service.py  sync_service.py  video_capture.py  video_metadata.py
sniffer/utils/: __init__.py  directory.py  file.py  logging.py
tests/: __init__.py  conftest.py  test_main.py  test_transcription.py  test_video_processor.py
tests/utils/: test_directory.py  test_file.py
