[project]
name = "sniffer"
version = "0.1.0"
description = "ðŸ” Video Content Extraction Tool - Sniff out audio, frames, and transcriptions from videos with precise word-level timestamps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=2.2.1",
    "openai>=1.107.3",
    "opencv-python>=4.12.0.88",
    "rich>=14.1.0",
    "typer>=0.17.4",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
]

[project.scripts]
sniffer = "sniffer.main:app"

[project.urls]
Homepage = "https://github.com/erictt/sniffer"
Repository = "https://github.com/erictt/sniffer"
Documentation = "https://github.com/erictt/sniffer#readme"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sniffer*"]

[tool.uv]
package = true
